--- a/index.html
+++ b/index.html
@@ -8,18 +8,27 @@
   <link rel="stylesheet" href="/css/styles.css">
 
   <title>Frontend Mentor | Stats preview card component</title>
-  
+
 </head>
 <body>
+<div class="card-container">
+  <div class="row">
+    <div class="col-lg-6">
+      Get insights that help your business grow.
 
-  Get insights that help your business grow.
+      Discover the benefits of data analytics and make better decisions regarding revenue, customer
+      experience, and overall efficiency.
 
-  Discover the benefits of data analytics and make better decisions regarding revenue, customer
-  experience, and overall efficiency.
+      10k+ companies
+      314 templates
+      12m+ queries
+    </div>
+    <div class="col-lg-6">
+      IMAGE
+    </div>
+  </div>
 
-  10k+ companies
-  314 templates
-  12m+ queries
+</div>
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
